094_polynomial_3/grade.txt
Grading at 11/11/2024:14:26:45.810045
For commit ID 00871b8ec6771fbc10df02b2f42587ba0801fd4c
Grading at Mon Nov 11 09:26:45 AM EST 2024
Compiling your code with our test main
testmain.cpp: In function ‘int main()’:
testmain.cpp:31:10: error: ‘convergence_failure’ does not name a type
   31 |   catch (convergence_failure<double> & cf) {
      |          ^~~~~~~~~~~~~~~~~~~
testmain.cpp:31:29: error: expected ‘)’ before ‘<’ token
   31 |   catch (convergence_failure<double> & cf) {
      |         ~                   ^
      |                             )
testmain.cpp:31:29: error: expected ‘{’ before ‘<’ token
testmain.cpp:31:29: error: expected primary-expression before ‘<’ token
testmain.cpp:31:30: error: expected primary-expression before ‘double’
   31 |   catch (convergence_failure<double> & cf) {
      |                              ^~~~~~
testmain.cpp:38:10: error: ‘convergence_failure’ does not name a type
   38 |   catch (convergence_failure<double> & cf) {
      |          ^~~~~~~~~~~~~~~~~~~
testmain.cpp:38:29: error: expected ‘)’ before ‘<’ token
   38 |   catch (convergence_failure<double> & cf) {
      |         ~                   ^
      |                             )
testmain.cpp:38:29: error: expected ‘{’ before ‘<’ token
testmain.cpp:38:29: error: expected primary-expression before ‘<’ token
testmain.cpp:38:30: error: expected primary-expression before ‘double’
   38 |   catch (convergence_failure<double> & cf) {
      |                              ^~~~~~
g++ failed

Overall Grade: FAILED
